# KUKA-on-Unity-and-Python

./: README.md  go.mod  pyproject.toml
SolvingDirectKinematics/: calculmovement.go  creatmanip.go  directkinematics.go  drawingmanipul.go  drawingrid.go  drawinterface.go  drawshapes.go  inverstask.go  main.go
adaptation/: main.go
